feat: add Docker setup for Azure MCP with multi-stage build and environment configuration

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "build": "bun build main.ts --target node --outdir dist --minify",
-    "dev": "bunx fastmcp inspect main.ts"
+    "dev": "bunx fastmcp inspect main.ts",
+    "start": "bun dist/main.js"
   },
   "publishConfig": {
     "access": "public"
